--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,4 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 monitor_speed = 115200
-lib_deps = arduino-libraries/Servo@^1.1.8
+lib_deps = khoih-prog/ESP8266_ISR_Servo@^1.3.0
